--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <title>Learning Sockets</title>
     </head>
     <body>
         <h1>Hello World!</h1>
+        <script src="/js/jquery-3.1.1.min.js"></script>
+        <script src="/js/socket.io-1.4.5.js"></script>
+        
+        <script type="text/javascript">
+            var socket = io();
+        </script>
     </body>
 </html>
