Added custom message event

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
         <title>Learning Sockets</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Simple chat app</h1>
+        <form id="chatForm">
+            <div>
+                <textarea name="textMessage"></textarea>
+            </div>
+            <button>
+                Send
+            </button>
+        </form>
         <script src="/js/jquery-3.1.1.min.js"></script>
         <script src="/js/socket.io-1.4.5.js"></script>
         <script src="/js/app.js"></script>
