Create login page and route user to the specified room

--- a/public/index.html
+++ b/public/index.html
@@ -6,50 +6,24 @@
         <link rel="stylesheet" href="/css/main.css">
     </head>
     <body>
-        <h1>Simple chat app</h1>
-        <div id="chat-box">
-            <div id="chat-list">
-                <ul>
-
-                </ul>
+        <h1>Pick a name</h1>
+        <form action="/chat.html">
+            <div>
+                <label>
+                    Name <input type="text" name="name" placeholder="Your name">
+                </label>
             </div>
-            <form id="chat-form">
-                <div class="form-group">
-                    <textarea name="textMessage"></textarea>
-                    <button>Send</button>
-                </div>
-            </form>
-        </div>
+            <div>
+                <label>
+                    Room <input type="text" name="room" placeholder="Enter room name">
+                </label>
+            </div>
+            <div>
+                <input type="submit" value="Chat!">
+            </div>
+        </form>
         <script src="/js/jquery-3.1.1.min.js"></script>
         <script src="/js/socket.io-1.4.5.js"></script>
-        <script>
-            (function(){
-
-                function getQueryParam(key) {
-                    var params = window.location.search.substring(1).split('&');
-                    for (var i=0; i<params.length; i++){
-                        let param = params[i].split('=');
-                        if (decodeURIComponent(param[0]) == key) {
-                            return decodeURIComponent(param[1]);
-                        }
-                    }
-                    return undefined;
-                }
-
-                function qs(query) {
-                    if (query) {
-                        return document.querySelector(query);
-                    }
-                }
-
-                var h = {};
-                h.getQueryParam = getQueryParam;
-                h.qs = qs;
-
-                window.h = h;
-
-            })();
-        </script>
-        <script src="/js/app.js"></script>
+        <script src="/js/helper.js"></script>
     </body>
 </html>
