Encapsulate chat to specific room using socket.join()

--- a/public/chat.html
+++ b/public/chat.html
@@ -7,8 +7,9 @@
     </head>
     <body>
         <a href="/">Change detail</a>
-        <h1>Simple chat app</h1>
+        <h1 class="room-name"></h1>
         <div id="chat-box">
+            
             <div id="participants">
                 
             </div>
